oop_mro/tests/trybuild/fail_constructor_missing_base.rs
use oop_mro::prelude::*;

oop_class! {
    class Animal {}

    class Dog: Animal {
        constructor() {}
    }
}

fn main() {}
